// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Carrousel /> renders correctly with a carrousel 1`] = `
<DocumentFragment>
  <div
    class="sc-bcXGCL gHoLKQ toasts-container toasts-container--top"
  />
  <section
    aria-label="menu.news"
    aria-roledescription="global.carrousel"
    class="sc-bcXGCL bGwxQV"
    id="carrousel"
  >
    <div
      class="sc-bcXGCL hbhjng"
    >
      <div
        aria-live="off"
        class="sc-bcXGCL fliKOZ"
        id="carrousel-items"
        style="transform: translate(-33.333333333333336%); transition: transform 1s;"
      >
        <div
          aria-hidden="true"
          aria-roledescription="carrousel.slide"
          class="sc-bcXGCL fKHBjQ"
          role="group"
          tabindex="-1"
        >
          <div
            class="sc-bcXGCL gfXQQa"
          >
            <img
              alt=""
              class="sc-bcXGCL cQVXux"
              loading="eager"
              sizes="(max-width: 320px) 320px, (max-width: 640px) 640px, (max-width: 960px) 960px, (max-width: 1280px) 1280px, (max-width: 2560px) 2560px,"
              srcset="
        http://localhost/cdn-cgi/image/width=320,format=auto//media/img1.png   320w,
         http://localhost/cdn-cgi/image/width=640,format=auto//media/img1.png   640w,
         http://localhost/cdn-cgi/image/width=960,format=auto//media/img1.png   960w,
         http://localhost/cdn-cgi/image/width=1280,format=auto//media/img1.png 1280w,
         http://localhost/cdn-cgi/image/width=2560,format=auto//media/img1.png 2560w,
         http://localhost/cdn-cgi/image/dpr=2,format=auto//media/img1.png 2x,
         http://localhost/cdn-cgi/image/dpr=3,format=auto//media/img1.png 3x,
         "
              style="object-fit: cover;"
            />
          </div>
          <div
            class="sc-bcXGCL bLxXma"
          >
            <div
              class="sc-bcXGCL iYgOAi"
            >
              <div
                class="sc-bcXGCL keKWCf"
              >
                <h3
                  class="sc-bcXGCL dbjepS cap-heading"
                >
                  Item1
                </h3>
                <p
                  class="sc-bcXGCL fEByha"
                >
                  Lorem ipsum
                </p>
              </div>
              <a
                class="sc-bcXGCL hKAlKL"
                href="/event/mon-event"
                tabindex="-1"
              >
                Voir +
              </a>
            </div>
          </div>
        </div>
        <div
          aria-hidden="false"
          aria-label="carrousel.position"
          aria-roledescription="carrousel.slide"
          class="sc-bcXGCL fKHBjQ"
          role="group"
        >
          <div
            class="sc-bcXGCL gfXQQa"
          >
            <img
              alt=""
              class="sc-bcXGCL cQVXux"
              loading="eager"
              sizes="(max-width: 320px) 320px, (max-width: 640px) 640px, (max-width: 960px) 960px, (max-width: 1280px) 1280px, (max-width: 2560px) 2560px,"
              srcset="
        http://localhost/cdn-cgi/image/width=320,format=auto//media/img1.png   320w,
         http://localhost/cdn-cgi/image/width=640,format=auto//media/img1.png   640w,
         http://localhost/cdn-cgi/image/width=960,format=auto//media/img1.png   960w,
         http://localhost/cdn-cgi/image/width=1280,format=auto//media/img1.png 1280w,
         http://localhost/cdn-cgi/image/width=2560,format=auto//media/img1.png 2560w,
         http://localhost/cdn-cgi/image/dpr=2,format=auto//media/img1.png 2x,
         http://localhost/cdn-cgi/image/dpr=3,format=auto//media/img1.png 3x,
         "
              style="object-fit: cover;"
            />
          </div>
          <div
            class="sc-bcXGCL bLxXma"
          >
            <div
              class="sc-bcXGCL iYgOAi"
            >
              <div
                class="sc-bcXGCL keKWCf"
              >
                <h3
                  class="sc-bcXGCL dbjepS cap-heading"
                >
                  Item1
                </h3>
                <p
                  class="sc-bcXGCL fEByha"
                >
                  Lorem ipsum
                </p>
              </div>
              <a
                class="sc-bcXGCL hKAlKL"
                href="/event/mon-event"
              >
                Voir +
              </a>
            </div>
          </div>
        </div>
        <div
          aria-hidden="true"
          aria-roledescription="carrousel.slide"
          class="sc-bcXGCL fKHBjQ"
          role="group"
          tabindex="-1"
        >
          <div
            class="sc-bcXGCL gfXQQa"
          >
            <img
              alt=""
              class="sc-bcXGCL cQVXux"
              loading="eager"
              sizes="(max-width: 320px) 320px, (max-width: 640px) 640px, (max-width: 960px) 960px, (max-width: 1280px) 1280px, (max-width: 2560px) 2560px,"
              srcset="
        http://localhost/cdn-cgi/image/width=320,format=auto//media/img1.png   320w,
         http://localhost/cdn-cgi/image/width=640,format=auto//media/img1.png   640w,
         http://localhost/cdn-cgi/image/width=960,format=auto//media/img1.png   960w,
         http://localhost/cdn-cgi/image/width=1280,format=auto//media/img1.png 1280w,
         http://localhost/cdn-cgi/image/width=2560,format=auto//media/img1.png 2560w,
         http://localhost/cdn-cgi/image/dpr=2,format=auto//media/img1.png 2x,
         http://localhost/cdn-cgi/image/dpr=3,format=auto//media/img1.png 3x,
         "
              style="object-fit: cover;"
            />
          </div>
          <div
            class="sc-bcXGCL bLxXma"
          >
            <div
              class="sc-bcXGCL iYgOAi"
            >
              <div
                class="sc-bcXGCL keKWCf"
              >
                <h3
                  class="sc-bcXGCL dbjepS cap-heading"
                >
                  Item1
                </h3>
                <p
                  class="sc-bcXGCL fEByha"
                >
                  Lorem ipsum
                </p>
              </div>
              <a
                class="sc-bcXGCL hKAlKL"
                href="/event/mon-event"
                tabindex="-1"
              >
                Voir +
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`<Carrousel /> renders correctly with a carrouselHighlighted 1`] = `
<DocumentFragment>
  <div
    class="sc-bcXGCL gHoLKQ toasts-container toasts-container--top"
  />
  <div
    aria-label="menu.news"
    aria-roledescription="global.carrousel"
    class="sc-bcXGCL iQCFge"
  >
    <div
      class="sc-bcXGCL kwEgby"
    >
      <div
        class="sc-bcXGCL coObtj"
      >
        <div
          class="sc-bcXGCL jsXoBQ"
        >
          <div
            class="sc-bcXGCL dwbxzy"
          >
            <h3
              class="sc-bcXGCL jZrWcn cap-heading"
            >
              Title
            </h3>
          </div>
          <div
            aria-live="off"
            class="sc-bcXGCL iNlobK"
            id="whats-new-items"
          >
            <div
              aria-label="carrousel.position"
              aria-roledescription="carrousel.slide"
              class="sc-bcXGCL hVTsVt"
              id="whats-new-item-0"
              role="group"
            >
              <div
                class="sc-bcXGCL hpxT"
              >
                <p
                  class="sc-bcXGCL kxBQAH cap-text"
                >
                  type-event
                </p>
              </div>
              <h4
                class="sc-bcXGCL kxNmEm cap-heading"
              >
                Item1
              </h4>
              <p
                class="sc-bcXGCL giNlAC cap-text"
                title="Lorem ipsum"
              >
                Lorem ipsum
              </p>
              <a
                class="sc-bcXGCL jqCqap cap-link"
                href="/event/mon-event"
              >
                learn.more
                <span
                  class="sr-only"
                >
                  global.on type-event Item1
                </span>
              </a>
            </div>
          </div>
        </div>
        <div
          class="sc-bcXGCL jASAGQ"
        >
          <img
            alt=""
            class="sc-bcXGCL bFjPnG"
            loading="eager"
            sizes="(max-width: 320px) 320px, (max-width: 640px) 640px, (max-width: 960px) 960px, (max-width: 1280px) 960px, (max-width: 2560px) 960px,"
            srcset="
        http://localhost/cdn-cgi/image/width=320,format=auto//media/img1.png   320w,
         http://localhost/cdn-cgi/image/width=640,format=auto//media/img1.png   640w,
         http://localhost/cdn-cgi/image/width=960,format=auto//media/img1.png   960w,
         http://localhost/cdn-cgi/image/width=1280,format=auto//media/img1.png 1280w,
         http://localhost/cdn-cgi/image/width=2560,format=auto//media/img1.png 2560w,
         http://localhost/cdn-cgi/image/dpr=2,format=auto//media/img1.png 2x,
         http://localhost/cdn-cgi/image/dpr=3,format=auto//media/img1.png 3x,
         "
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Carrousel /> renders correctly with a carrouselHighlighted on mobile 1`] = `
<DocumentFragment>
  <div
    class="sc-bcXGCL gHoLKQ toasts-container toasts-container--top"
  />
  <div
    aria-label="menu.news"
    aria-roledescription="global.carrousel"
    class="sc-bcXGCL eqchdY"
  >
    <h3
      class="sc-bcXGCL kbFwwM cap-heading"
    >
      TitleMobile
    </h3>
    <div
      class="slick-slider slick-initialized"
    >
      <div
        class="slick-list"
      >
        <div
          class="slick-track"
          style="opacity: 1; transform: translate3d(0px, 0px, 0px);"
        >
          <div
            aria-hidden="false"
            class="slick-slide slick-active slick-current"
            data-index="0"
            style="outline: none; width: 0px;"
            tabindex="-1"
          >
            <div>
              <a
                class="sc-bcXGCL rVgbN"
                href="/event/mon-event"
                style="width: 100%; display: inline-block;"
                tabindex="-1"
              >
                <img
                  alt=""
                  class="sc-bcXGCL erCQef"
                  loading="eager"
                  sizes="(max-width: 320px) 320px, (max-width: 640px) 640px, (max-width: 960px) 960px, (max-width: 1280px) 1280px, (max-width: 2560px) 2560px,"
                  srcset="
        http://localhost/cdn-cgi/image/width=320,format=auto//media/img1.png   320w,
         http://localhost/cdn-cgi/image/width=640,format=auto//media/img1.png   640w,
         http://localhost/cdn-cgi/image/width=960,format=auto//media/img1.png   960w,
         http://localhost/cdn-cgi/image/width=1280,format=auto//media/img1.png 1280w,
         http://localhost/cdn-cgi/image/width=2560,format=auto//media/img1.png 2560w,
         http://localhost/cdn-cgi/image/dpr=2,format=auto//media/img1.png 2x,
         http://localhost/cdn-cgi/image/dpr=3,format=auto//media/img1.png 3x,
         "
                  style="object-fit: cover;"
                />
                <div
                  class="sc-bcXGCL fTSAZS"
                >
                  <div
                    class="sc-bcXGCL dVWqGM"
                  >
                    <div
                      class="sc-bcXGCL dTiXUh cap-text"
                    >
                      type-event
                    </div>
                  </div>
                  <p
                    class="sc-bcXGCL fMsHJT cap-text"
                    title="Item1"
                  >
                    Item1
                  </p>
                </div>
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
